Update to milestone dependencies (#196)
* Update to milestone dependencies

* use Milestones

* SQL M2

* data m2

* Add support for generating a client id in HiveMQ support

---------

Co-authored-by: Sergio del Amo <sergio.delamo@softamo.com>